<resources>
    <string name="app_name">Journey</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">373105216361988</string>
    <string name="google_maps_api_key">AIzaSyB-beM4wqDZs2pf645psQrVmOFsrIf06tQ</string>
    <string name="parse_app_id">com.github.paranoidandroid3.journey</string>
    <string name="title_my_journeys">My Journeys</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="confirm_delete">Are you sure you want to delete %1$s?</string>
    <string name="catch_phrase_intro">Define Your Own</string>
    <string name="no_journeys_label">You have no journeys</string>
    <string name="create_new_journey_label">Create one now</string>
    <string name="destination">Destination</string>    
    <string name="title_activity_wizard">WizardActivity</string>

    <string name="name_prompt">What do you want to name your Journey?</string>
    <string name="legs_prompt">Where are you going?</string>
    <string name="tags_prompt">How will you travel?</string>
    <string name="new_leg_hint">Enter destination…</string>

    <string name="size_solo">Solo</string>
    <string name="size_couple">Couple</string>
    <string name="size_group">Group</string>
    <string name="size_family">Family</string>

    <string name="tag_foodie">Foodie</string>
    <string name="tag_culture">Culture</string>
    <string name="tag_adventure">Adventure</string>
    <string name="tag_relaxation">Chiller</string>
    <string name="tag_budget">Budget</string>
    <string name="tag_luxury">Luxury</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="edit_journey_name">Journey name</string>
    <string name="edit_legs">Legs</string>
    <string name="edit_tags">Tags</string>
    <string name="drawer_title_edit">Edit</string>
    <string name="profile_image_description">Profile image</string>

    <string name="formatted_place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\nRating: %5$s\nId: %6$s\n
    </string>
    <string name="deleted_title">%1$s journey deleted</string>
    <string name="undo">Undo</string>
    <string name="no_activities">No activities for this day</string>
</resources>
